# pycrtsh

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
pycrtsh/: api.py  cli.py
tests/: test_pycrtsh.py
