[tool.poetry]
name = "pycrtsh"
version = "0.3.2"
description = "Python library to request crt.sh certificate information"
authors = ["Tek <tek@randhome.io>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
lxml = "==4.5.1"
beautifulsoup4 = "==4.9.1"
python-dateutil = "^2.8.1"
PrettyTable = "^0.7.2"

[tool.poetry.dev-dependencies]
#
commitizen = "^1.6"
mkdocs = "^1.0"
pybadges = "^2.2"
pylint = {version = "^2.3",python = "^3.8"}  # needed for PyPy compatibility
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-html = "^2.0.1"
requests_mock = "^1.7"
tox = "^3.14"
tox-pyenv = "^1.1"
tox-venv = "^0.4.0"
flake8 = "^3.8.3"
autopep8 = "^1.5.3"

[tool.black]

# https://black.readthedocs.io/en/stable/pyproject_toml.html#configuration-format
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
